# airpods-pro-battery-win

./: .gitignore  .mailmap  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  airpods_battery.py  build.bat  debug_ble_scan.py  pyproject.toml  requirements.txt
assets/: generate_ico.py  generate_icon.py
src/: battery_ui.py  ble_scanner.py  constants.py  icon_generator.py  main.py  tray_app.py
